--- a/index.html
+++ b/index.html
@@ -11,5 +11,32 @@
             Organizado por su estamento continental, la UEFA, es disputado anualmente desde su 
             instauración en la temporada 1955-56, y su final es el acontecimiento deportivo más 
             seguido en el mundo, con una audiencia estimada entre 350 y 400 millones de espectadores</p>
+            <h2> Equipos clasificados </h2>
+            <ol>
+                <li> Napoli </li>
+                <li> Liverpool</li>
+                <li> Porto</li>
+                <li> Brujas</li>
+                <li> Bayern</li>
+                <li> Inter de Milán</li>
+                <li> Tottenham</li>
+                <li> Frankfurt</li>
+                <li> Chealse</li>
+                <li> Milan</li>
+                <li> Real Madrid</li>
+                <li> Leizpig</li>
+                <li> Manchester City</li>
+                <li> Borusia Dormund</li>
+                <li> Benfica</li>
+                <li> PSG</li>
+            </ol>
+        <h2> Calendario de la ida </h2>
+            <dl>
+                <dt> Martes 14 de Febrero</dt>
+                <dd> Se enfrentan el PSG contra el Bayern en el parque de los Príncipes y el Milan 
+                    contra el Tottenham en el San Siro </dd>
+                
+            </dl>
+
     </body>
 </html>
