--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ol>
         <h2> Calendario de la ida </h2>
             <dl>
-                <dt> Martes 14 de Febrero</dt>
+                <dt> <b>Martes 14 de Febrero:</b></dt>
                 <dd> Se enfrentan el PSG contra el Bayern en el parque de los Príncipes y el Milan 
                     contra el Tottenham en el San Siro </dd>
                 
