--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <h2> Calendario de la ida </h2>
             <dl>
                 <dt> <b>Martes 14 de Febrero:</b></dt>
-                <dd> Se enfrentan el PSG contra el Bayern en el parque de los Príncipes y el Milan 
-                    contra el Tottenham en el San Siro </dd>
+                    <dd> PSG-Bayern <br>Milan-Tottenham </dd>
+                <dt> <b>Miércoles 15 de Febrero</b></dt>
+                    <dd> Brujas-Benfica <br> Dormund-Chealse </dd>
                 
             </dl>
 
