--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
             <dl>
                 <dt> <b>Martes 14 de Febrero:</b></dt>
                     <dd> PSG-Bayern <br>Milan-Tottenham </dd>
-                <dt> <b>Miércoles 15 de Febrero</b></dt>
+                <dt> <b>Miércoles 15 de Febrero:</b></dt>
                     <dd> Brujas-Benfica <br> Dormund-Chealse </dd>
-                
+                <dt> <b>Martes 21 de Febrero:</b></dt>
+                    <dd> Liverpool-Madrid <br> Frankfurt-Napoli</dd>
+                <dt> <b> Miércoles 22 de Febrero:</b></dt>
+                    <dd> Leipzig-Manchester City <br> Inter-Porto</dd>
             </dl>
 
     </body>
