--- a/especificaciones.html
+++ b/especificaciones.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html lang="es-ES"> 
-    
+<head> 
+    <style>
+        body{background-color: blue;}
+
+    </style>
+</head>
 </html>
