--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> La Champions</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="estilos.css">
     </head>
     <body>
         <h1> La Champions </h1>
