--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> La Champions</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="especificaciones.html"
     </head>
     <body>
         <h1> La Champions </h1>
@@ -12,6 +13,7 @@
             Organizado por su estamento continental, la UEFA, es disputado anualmente desde su 
             instauración en la temporada 1955-56, y su final es el acontecimiento deportivo más 
             seguido en el mundo, con una audiencia estimada entre 350 y 400 millones de espectadores</p>
+            <link rel="stylesheet" href="https://es.uefa.com/uefachampionsleague/"
             <h2> Equipos clasificados </h2>
             <ul>
                 <li> Napoli </li>
