--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Organizado por su estamento continental, la UEFA, es disputado anualmente desde su 
             instauración en la temporada 1955-56, y su final es el acontecimiento deportivo más 
             seguido en el mundo, con una audiencia estimada entre 350 y 400 millones de espectadores</p>
-            <link rel="stylesheet" href="https://es.uefa.com/uefachampionsleague/"
+            <link="https://es.uefa.com/uefachampionsleague/">
             <h2> Equipos clasificados </h2>
             <ul>
                 <li> Napoli </li>
