--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Organizado por su estamento continental, la UEFA, es disputado anualmente desde su 
             instauración en la temporada 1955-56, y su final es el acontecimiento deportivo más 
             seguido en el mundo, con una audiencia estimada entre 350 y 400 millones de espectadores</p>
-          <a href="https://es.uefa.com/uefachampionsleague/">UEFA</a>
+          <a href="https://es.uefa.com/uefachampionsleague/"> Champions</a>
             <h2> Equipos clasificados </h2>
             <ul>
                 <li> Napoli </li>
@@ -54,4 +54,4 @@
                 <li>Manchester United: 3</li>
             </ol>
     </body>
-</html>9
+</html>
