--- a/especificaciones.html
+++ b/especificaciones.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="es-ES"> 
-<head> 
-    <style>
-        body{background-color: blue;}
-
-    </style>
-</head>
+    <head> 
+        <h1> Equipos con más champions</h1>
+            <ol>
+                <li>Real Madrid: 14</li>
+                <li>Milan: 7</li>
+                <li>Liverpool: 6</li>
+                <li>Barcelona: 5</li>
+                <li>Ajax: 4</li>
+                <li>Manchester United: 3</li>
+    <       /ol>
+    </head>
 </html>
