--- a/especificaciones.html
+++ b/especificaciones.html
@@ -2,6 +2,7 @@
 <html lang="es-ES"> 
     <head> 
         <h1> Equipos con más champions</h1>
+        <p> Estos son los equipos que más veces han levantado la orejona:</p>
             <ol>
                 <li>Real Madrid: 14</li>
                 <li>Milan: 7</li>
