--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             internacional oficial de fútbol más prestigioso a nivel de clubes en Europa. 
             Organizado por su estamento continental, la UEFA, es disputado anualmente desde su 
             instauración en la temporada 1955-56, y su final es el acontecimiento deportivo más 
-            seguido en el mundo, con una audiencia estimada entre 350 y 400 millones de espectadores</p>
+            seguido en el mundo, con una audiencia estimada entre 350 y 400 millones de espectadores.</p>
           <a href="https://es.uefa.com/uefachampionsleague/"> Champions</a>
             <h2> Equipos clasificados </h2>
             <ul>
