--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title> La Champions</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="estilos.css">
-        <link rel="stylesheet" href="especificaciones.html"
     </head>
     <body>
         <h1> La Champions </h1>
@@ -44,5 +43,6 @@
                 <dt> <b> Miércoles 22 de Febrero:</b></dt>
                     <dd> Leipzig-Manchester City <br> Inter-Porto</dd>
             </dl>
+        <link rel="stylesheet" href="especificaciones.html">
     </body>
 </html>
