--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
                 <dt> <b> Miércoles 22 de Febrero:</b></dt>
                     <dd> Leipzig-Manchester City <br> Inter-Porto</dd>
             </dl>
-        <link rel="stylesheet" href="especificaciones.html">
+        <a href="especificaciones.html"> Máximos Ganadores</a>
     </body>
 </html>
